updates to match model.py conventions

--- a/interventions.ipynb
+++ b/interventions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A contact matrix (here, $c_{ij}$) describes the average number of daily contacts an individual in population cohort $i$ makes with people in cohort $j$. Logically contacts should be symmetric, in the sense that the total number of daily contacts made by members of cohort $i$ with members of cohort $j$ should be equal to the number of contacts by cohort $j$ with cohort $i$. Which is to say, given $c_{ij}$ and a vector of population fractions $f_i$,\n",
+    "A contact matrix (here, $c_{ij}$) describes the average number of daily contacts an individual in population cohort $i$ makes with people in cohort $j$. Logically contacts should satisfy a reciprocity condition, that the total number of daily contacts made by members of cohort $i$ with members of cohort $j$ should be equal to the number of contacts by cohort $j$ with cohort $i$. Which is to say, given $c_{ij}$ and a vector of population fractions $f_i$,\n",
     "\n",
     "$$ c_{ij} f_i = c_{ji} f_j. $$\n",
     "\n",
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "def symmetrize(pop_fracs, contact_data=CONTACT_DATA):\n",
-    "    \"\"\"Construct a symmetric contact matrix from empirical data.\"\"\"\n",
+    "    \"\"\"Construct a contact matrix with reciprocity from empirical data.\"\"\"\n",
     "    f = pop_fracs.copy()\n",
     "    d = contact_data.copy()\n",
     "    c = np.zeros((len(f), len(f)))\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -222,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
-    "interventions = {\n",
+    "npi_impacts = {\n",
     "    'Quarantine': {'chi': .63},\n",
     "    'Quarantine and tracing': {'chi': .48},\n",
     "    'Cancel mass gatherings': {'chi': .72},\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
     "reductions = {region: np.round((R0-R_effs[region])/R0, 3) for region in WORLD_POP}\n",
     "pp.pprint(reductions)\n",
     "\n",
-    "interventions.update({'School closure': impact})"
+    "npi_impacts.update({'School closure': impact})"
    ]
   },
   {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -363,12 +363,12 @@
     "reductions = {region: np.round((R0-R_effs[region])/R0, 3) for region in WORLD_POP}\n",
     "pp.pprint(reductions)\n",
     "\n",
-    "interventions.update({'Shielding the elderly': impact})"
+    "npi_impacts.update({'Shielding the elderly': impact})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "pp.pprint(interventions)"
+    "pp.pprint(npi_impacts)"
    ]
   },
   {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -433,11 +433,11 @@
     }
    ],
    "source": [
-    "def combine(selected, interventions, contact_matrix):\n",
+    "def combine(selected_npis, npi_impacts, contact_matrix):\n",
     "    \"\"\"Apply selected interventions to a basic contact matrix.\"\"\"\n",
     "    c_eff = contact_matrix.copy()\n",
-    "    for s in selected:\n",
-    "        impact = interventions.get(s, {})\n",
+    "    for npi in selected_npis:\n",
+    "        impact = npi_impacts.get(npi, {})\n",
     "        c_eff *= impact.get('chi', 1)\n",
     "        for idx_pair in impact.get('indices', []):\n",
     "            c_eff[idx_pair] *= impact.get('xi', 1)\n",
@@ -454,18 +454,11 @@
     "    print(combo)\n",
     "    c_effs, R_effs = {}, {}\n",
     "    for region, f in WORLD_POP.items():\n",
-    "        c_effs.update({region: combine(combo, interventions, c0s[region])})\n",
+    "        c_effs.update({region: combine(combo, npi_impacts, c0s[region])})\n",
     "        R_effs.update({region: compute_R(f, c_effs[region], beta0s[region], GAMMA)})\n",
     "    #print(f'c_effs: {c_effs}\\n')\n",
     "    print(f'R_effs: {R_effs}\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
