--- a/interventions.ipynb
+++ b/interventions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,25 +240,20 @@
    "source": [
     "## Second class \n",
     "These inventions are age-structured.\n",
-    "5. School closures. Observed reduction in R0: 18%.\n",
-    "6. Shielding the elderly. Assumed decrease in contacts between elderly and others of 50%. \n",
-    "\n",
-    "Mathematically we express the impact as a list of contact matrix _indices_ and a multiplicative factor $\\xi$\n",
-    "to be applied to the corresponding matrix entries."
+    "5. School closures. We follow the per-cohort changes in contact rates from [Litvinova et al](https://www.pnas.org/content/116/27/13174).\n",
+    "6. Shielding the elderly. Assumed decrease in contacts between elderly and others of 50%. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### School closures\n",
-    "We make the simplifying assumption that the primary effect is to reduce interactions among the youngest\n",
-    "age cohort. Reducing the youth-youth contact to zero leads to a reduction in R0 of 16-17%, depending on region. Any futher reduction would involve assumptions about the effects of school closure on mixing for the middle and elderly cohorts or revision of the original contact data to better mirror the dynamics where the 18% reduction was observed."
+    "### School closures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -266,33 +261,34 @@
      "output_type": "stream",
      "text": [
       "Effective contact matrices under school closure:\n",
-      "{   'Africa': array([[0.        , 3.63372781, 0.31454635],\n",
-      "       [4.20616438, 7.69      , 0.86778539],\n",
-      "       [2.89954545, 6.91072727, 1.92      ]]),\n",
-      "    'America': array([[0.        , 4.79800341, 0.58709898],\n",
-      "       [2.59854898, 7.69      , 1.35539741],\n",
-      "       [1.03626506, 4.41728916, 1.92      ]]),\n",
-      "    'Asia': array([[0.        , 4.72932692, 0.49982372],\n",
-      "       [2.64435484, 7.69      , 1.1615233 ],\n",
-      "       [1.19041985, 4.94755725, 1.92      ]]),\n",
-      "    'Europe': array([[0.        , 5.59777251, 0.97471564],\n",
-      "       [2.22016917, 7.69      , 1.82949248],\n",
-      "       [0.80025292, 3.78712062, 1.92      ]])}\n",
+      "{   'Africa': array([[1.965     , 2.90698225, 0.47811045],\n",
+      "       [3.36493151, 5.6906    , 0.86778539],\n",
+      "       [4.40730909, 6.91072727, 1.92      ]]),\n",
+      "    'America': array([[1.965     , 3.83840273, 0.89239044],\n",
+      "       [2.07883919, 5.6906    , 1.35539741],\n",
+      "       [1.57512289, 4.41728916, 1.92      ]]),\n",
+      "    'Asia': array([[1.965     , 3.78346154, 0.75973205],\n",
+      "       [2.11548387, 5.6906    , 1.1615233 ],\n",
+      "       [1.80943817, 4.94755725, 1.92      ]]),\n",
+      "    'Europe': array([[1.965     , 4.47821801, 1.48156777],\n",
+      "       [1.77613534, 5.6906    , 1.82949248],\n",
+      "       [1.21638444, 3.78712062, 1.92      ]])}\n",
       "Effective R0:\n",
-      "{'Africa': 2.16, 'America': 2.17, 'Asia': 2.17, 'Europe': 2.18}\n",
+      "{'Africa': 1.84, 'America': 1.84, 'Asia': 1.83, 'Europe': 1.86}\n",
       "Fractional reductions in R0:\n",
-      "{'Africa': 0.169, 'America': 0.165, 'Asia': 0.165, 'Europe': 0.162}\n"
+      "{'Africa': 0.292, 'America': 0.292, 'Asia': 0.296, 'Europe': 0.285}\n"
      ]
     }
    ],
    "source": [
-    "impact = {'xi': 0, 'indices': [(0,0)]}\n",
+    "impact = {'cohort_chi': [[.25, .8, 1.52],\n",
+    "                        [.8, .74, 1],\n",
+    "                        [1.52, 1, 1]]}\n",
     "\n",
     "c_effs, R_effs = {}, {}\n",
     "for region, f in WORLD_POP.items():\n",
     "    c = c0s[region].copy()\n",
-    "    for idx_pair in impact.get('indices', []):\n",
-    "        c[idx_pair] *= impact.get('xi', 1)\n",
+    "    c *= impact['cohort_chi']\n",
     "    c_effs.update({region: c})\n",
     "    R_effs.update({region: compute_R(f, c, beta0s[region], GAMMA)})\n",
     "    \n",
@@ -311,12 +307,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Shielding the elderly\n"
+    "### Shielding the elderly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -344,14 +340,14 @@
     }
    ],
    "source": [
-    "elderly_entries = [(0,-1), (1,-1), (-1,0), (-1,1), (-1,-1)] \n",
-    "impact = {'xi': .5, 'indices': elderly_entries}\n",
+    "impact = {'cohort_chi': [[1, 1, .5],\n",
+    "                         [1, 1, .5],\n",
+    "                         [.5, .5, .5]]}\n",
     "\n",
     "c_effs, R_effs = {}, {}\n",
     "for region, f in WORLD_POP.items():\n",
     "    c = c0s[region].copy()\n",
-    "    for idx_pair in impact.get('indices', []):\n",
-    "        c[idx_pair] *= impact.get('xi', 1)\n",
+    "    c *= impact['cohort_chi']\n",
     "    c_effs.update({region: c})\n",
     "    R_effs.update({region: compute_R(f, c, beta0s[region], GAMMA)})\n",
     "    \n",
@@ -368,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -378,14 +374,13 @@
       "{   'Cancel mass gatherings': {'chi': 0.72},\n",
       "    'Quarantine': {'chi': 0.63},\n",
       "    'Quarantine and tracing': {'chi': 0.48},\n",
-      "    'School closure': {'indices': [(0, 0)], 'xi': 0},\n",
+      "    'School closure': {   'cohort_chi': [   [0.25, 0.8, 1.52],\n",
+      "                                            [0.8, 0.74, 1],\n",
+      "                                            [1.52, 1, 1]]},\n",
       "    'Shelter in place': {'chi': 0.34},\n",
-      "    'Shielding the elderly': {   'indices': [   (0, -1),\n",
-      "                                                (1, -1),\n",
-      "                                                (-1, 0),\n",
-      "                                                (-1, 1),\n",
-      "                                                (-1, -1)],\n",
-      "                                 'xi': 0.5}}\n"
+      "    'Shielding the elderly': {   'cohort_chi': [   [1, 1, 0.5],\n",
+      "                                                   [1, 1, 0.5],\n",
+      "                                                   [0.5, 0.5, 0.5]]}}\n"
      ]
     }
    ],
@@ -404,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -412,19 +407,19 @@
      "output_type": "stream",
      "text": [
       "['School closure', 'Shielding the elderly']\n",
-      "R_effs: {'Africa': 2.02, 'America': 2.03, 'Asia': 2.04, 'Europe': 2.03}\n",
+      "R_effs: {'Africa': 1.65, 'America': 1.65, 'Asia': 1.65, 'Europe': 1.64}\n",
       "\n",
       "['Quarantine', 'School closure']\n",
-      "R_effs: {'Africa': 1.36, 'America': 1.37, 'Asia': 1.37, 'Europe': 1.38}\n",
+      "R_effs: {'Africa': 1.16, 'America': 1.16, 'Asia': 1.15, 'Europe': 1.17}\n",
       "\n",
       "['Quarantine and tracing', 'School closure']\n",
-      "R_effs: {'Africa': 1.04, 'America': 1.04, 'Asia': 1.04, 'Europe': 1.05}\n",
+      "R_effs: {'Africa': 0.88, 'America': 0.88, 'Asia': 0.88, 'Europe': 0.89}\n",
       "\n",
       "['Quarantine and tracing', 'School closure', 'Cancel mass gatherings']\n",
-      "R_effs: {'Africa': 0.75, 'America': 0.75, 'Asia': 0.75, 'Europe': 0.75}\n",
+      "R_effs: {'Africa': 0.64, 'America': 0.63, 'Asia': 0.63, 'Europe': 0.64}\n",
       "\n",
       "['Quarantine and tracing', 'School closure', 'Cancel mass gatherings', 'Shielding the elderly']\n",
-      "R_effs: {'Africa': 0.7, 'America': 0.7, 'Asia': 0.7, 'Europe': 0.7}\n",
+      "R_effs: {'Africa': 0.57, 'America': 0.57, 'Asia': 0.57, 'Europe': 0.57}\n",
       "\n",
       "['Shelter in place']\n",
       "R_effs: {'Africa': 0.88, 'America': 0.88, 'Asia': 0.88, 'Europe': 0.88}\n",
@@ -439,8 +434,7 @@
     "    for npi in selected_npis:\n",
     "        impact = npi_impacts.get(npi, {})\n",
     "        c_eff *= impact.get('chi', 1)\n",
-    "        for idx_pair in impact.get('indices', []):\n",
-    "            c_eff[idx_pair] *= impact.get('xi', 1)\n",
+    "        c_eff *= impact.get('cohort_chi', 1)\n",
     "    return c_eff\n",
     "\n",
     "ex_combos = [['School closure', 'Shielding the elderly'],\n",
@@ -459,6 +453,13 @@
     "    #print(f'c_effs: {c_effs}\\n')\n",
     "    print(f'R_effs: {R_effs}\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
